--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "openpgp": "^5.5.0"
   }
 }
